--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,16 @@
     "axios": "^1.3.4",
     "browser-image-compression": "^2.0.2",
     "country-state-city": "^3.1.2",
+    "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
